<resources>
    <string name="Claim_Available2"> érvényes! </string>
    <string name="Claim_SnackBarError2"> Nem található ilyen kincs a szerveren! </string>
    <string name="Claim_SnackBarError_Internet"> Nincs internetkapcsolat! </string>
    <string name="app_name">TreasureHunt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello Summer ship!</string>
    <string name="remember_me">Remember me</string>
    <string name="auto_login">Auto login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="treasures_discovered">Treasures discovered</string>
    <string name="Username">Username</string>
    <string name="treasures_hidden">Treasures hidden</string>
    <string name="refresh">Refresh</string>
    <string name="Treasures_hidden">Treasures hidden</string>
    <string name="update">Update photo</string>
    <string name="score">Score</string>
    <string name="successful">Successful</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="username_already_exists">Username already exists. Try a different one!</string>
    <string name="invalid_username">Invalid username!</string>
    <string name="invalid_password">Invalid password!</string>
    <string name="failed_operation">Operation failed!</string>
    <string name="invalid_password_confirm">The passwords do not match!</string>
    <string name="login_failed">Login failed!</string>
    <string name="incorrect_password">Incorrect password!</string>
    <string name="username_not_exists">This username is not registered yet!</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="claim_treasure">Claim Treasure</string>
    <string name="write_pass_code">Write here the item pass code!</string>
    <string name="confirm_and_claim">Confirm and claim treasure!</string>
    <string name="hide_treasure">Hide treasure</string>
    <string name="profile">Profile</string>
    <string name="description">Description</string>
    <string name="map">Show on map</string>
    <string name="missing_permission">Permission not granted!</string>
    <string name="invalid_pass_code">Invalid pass code or wrong treasure!</string>
    <string name="online_mode">Online!</string>
    <string name="offline_mode">Offline!</string>
    <string name="correct_pass_code">Correct pass code!</string>
    <string name="not_available_treasure">Not available treasure on server!</string>
    <string name="yes">Yes!</string>
    <string name="no">No!</string>
    <string name="turn_on_your_gps">Please Turn ON your GPS Connection!</string>
    <string name="Claim_editText_EmptyError">Is empty!/nPlease write here something!</string>
    <string name="Claim_error3">This is your treasure. It is not fair!</string>
    <string name="Claim_snackBarError1">Invalid pass code or wrong treasure!</string>
    <string name="claim_error_no_score_change">Your score did not change.</string>
    <string name="Claim_snackBar_scoreUpdate">Your score now is bigger!</string>
    <string name="Claim_Available">This treasure pass code is valid! </string>
    <string name="claim_snack_bar_error_treasure_not_available"> Not available treasure on server </string>
    <string name="claim_snack_bar_error_internet"> No internet connection!Please turn on the wifi </string>
    <string name="top_list_score">Score: </string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="unreachable">The server is unreachable!</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="location">Show on map</string>
    <string name="recent">Recent</string>
    <string name="favorites">Favorites</string>

    <!-- fragment tags -->
    <string name="fragment_camera2">Camera2</string>
    <string name="fragment_view_stickers">View Stickers</string>
    <string name="hidetreasureerror">Can\'t be empty.</string>
    <string name="hidetreasureerror2">This treasure\'s passcode is occupied</string>
    <string name="hidetreasurecreate">Your treasure is created!</string>
    <string name="hidetitle">Teasing title:</string>
    <string name="hidedescript">Description:</string>
    <string name="hidephoto">Photo clue:</string>
    <string name="hideloc">Location:</string>
    <string name="hidepoints">Prize points:</string>
    <string name="hidepass">Pass code:</string>
    <string name="titlehint">Enter a title for your item</string>
    <string name="descripthint">Something that would motivate other players</string>
    <string name="photohint">Link a representative image</string>
    <string name="lochint">A pair of coordinates [latitude,longitude]</string>
    <string name="prizehint">How much of your own prize points would you award</string>
    <string name="passhint">Unique identifier, so it can be validated when claimed</string>
    <string name="claimed">Claimed by </string>
    <string name="createtreasurebutton">Create treasure</string>
    <string name="create_treasure">Creating treasure failed</string>
    <string name="choose_another_passcode">"Please choose another passcode!"</string>
    <string name="all_fields_are_required">"All the fields are required"</string>
    <string name="hide_treasure_gps_get_location_failed">Can\'t get current location!</string>
    <string name="user_profile_no_informations_error_message">"Can't download user informations."</string>
    <string name="profile_user_name_format">Username: %1$s</string>
    <string name="profile_treasures_discovered_format">Treasures discovered: %1$d</string>
    <string name="profile_treasures_hidden_format">Treasures hidden: %1$d</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_username">Username: %1$s</string>
    <string name="score_with_plus">+%1$s</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="read_qr_code">Read QR code</string>
    <string name="pass_code">Pass code</string>
    <string name="prevent_mem_leaks">"To prevent memory leaks barcode scanner has been stopped"</string>
    <string name="file_string">File</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="take_picture">Take Picture</string>
    <string name="profile_score">Score:</string>
    <string name="add_treasure">Add treasure</string>
    <string name="top_list">Top list</string>
    <string name="treasures">Treasures</string>
    <string name="my_profile">Profile</string>
    <string name="Chooser_dialog_message">Choose an option for upload an image</string>
    <string name="upload_profile_image">Upload profile image</string>
    <string name="get_current_location">Get current location</string>
    <string name="pick_location">Pick location</string>
    <string name="location_of_the_image">Location of the image"</string>
    <string name="Claim_Error4">Az ön pontszáma nem változott.</string>

    <string name="back_button_press">Please back again to exit.</string>
    <string name="empty_string">\"\"</string>

    <string name="select_language">Select language</string>
    <string name="no_image_selected">No image selected</string>

    <string name="language_eng">English</string>
    <string name="language_ro">Romania</string>
    <string name="language_hu">Hungary</string>

</resources>
