<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/my_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_recent"
        android:enabled="true"
        android:icon="@drawable/ic_chest"
        android:title="@string/treasures"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_cup"
        android:title="@string/top_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_hide_treasure"
        android:enabled="true"
        android:icon="@drawable/ic_add_treasure"
        android:title="@string/hide_treasure"
        app:showAsAction="ifRoom" />
</menu>