<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HideTreasureFragment"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/titletextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidetitle"
        android:textSize="@dimen/hide_textsize"
        android:layout_marginLeft="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/teasing_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/titlehint"
        android:textColorHint="@color/white_transparent_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titletextview"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/descriptiontextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hidedescript"
        android:layout_marginLeft="4dp"
        android:textSize="@dimen/hide_textsize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teasing_edit_text" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/descripthint"
        android:textColorHint="@color/white_transparent_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptiontextview"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/phototextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hidephoto"
        android:textColorHint="@color/white_transparent_30"
        android:textSize="@dimen/hide_textsize"
        android:layout_marginLeft="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_edit_text"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/photo_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/photohint"
        android:textColorHint="@color/white_transparent_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phototextview"
        android:singleLine="true"/>

    <ImageView
        android:id="@+id/photo_clue_image_view"
        android:layout_width="@dimen/arrowimagesize"
        android:layout_height="@dimen/arrowimagesize"
        android:layout_marginTop="@dimen/arrowmargtop"
        android:layout_marginRight="@dimen/arrowmargright"
        android:padding="5dp"
        android:src="@drawable/ic_photo_camera_orange_24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phototextview" />


    <TextView
        android:id="@+id/locationtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hideloc"
        android:textSize="@dimen/hide_textsize"
        android:layout_marginLeft="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo_edit_text" />

    <EditText
        android:id="@+id/location_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lochint"
        android:textColorHint="@color/white_transparent_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationtextview"
        android:singleLine="true"/>

    <LinearLayout
        android:id="@+id/current_location_getter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_edit_text">

        <ImageView
            android:layout_width="@dimen/arrowimagesize"
            android:layout_height="@dimen/arrowimagesize"
            android:padding="5dp"
            android:src="@drawable/ic_my_location_orange_24dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get current location"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_location_getter">

        <ImageView
            android:layout_width="@dimen/arrowimagesize"
            android:layout_height="@dimen/arrowimagesize"
            android:padding="5dp"
            android:src="@drawable/ic_location_on_orange_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pick location"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/image_location_getter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_picker">

        <ImageView
            android:layout_width="@dimen/arrowimagesize"
            android:layout_height="@dimen/arrowimagesize"
            android:padding="5dp"
            android:src="@drawable/ic_camera_enhance_orange_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location of the image"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/pointstextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hidepoints"
        android:textSize="@dimen/hide_textsize"
        android:layout_marginLeft="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_location_getter" />

    <EditText
        android:id="@+id/prize_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prizehint"
        android:textColorHint="@color/white_transparent_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pointstextview"
        android:inputType="number"
        android:singleLine="true" />

    <TextView
        android:id="@+id/passcodetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hidepass"
        android:textSize="@dimen/hide_textsize"
        android:layout_marginLeft="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prize_edit_text" />

    <EditText
        android:id="@+id/passcode_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/passhint"
        android:textColorHint="@color/white_transparent_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passcodetextview"
        android:inputType="number"
        android:singleLine="true"/>

    <Button
        android:id="@+id/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue500"
        android:textColor="@color/gray900"
        android:padding="10dp"
        android:text="@string/createtreasurebutton"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passcode_edit_text" />
</android.support.constraint.ConstraintLayout>
</ScrollView>